- Improvement: Adds fenixedu OSS DM [#qubIT-Omnis-4736]

11.3.1 (12-12-2023)
- Bug Fix: Fix bug in PersonCustomer#switchCustomer, which prevents the creation of a new debt account [#qubIT-Fenix-4662]

11.3.0 (11-12-2023)
- Improvement: Apply balance transfer service automatically, if the balance transfer service implementation allows [#qubIT-Fenix-4662]

11.2.3 (07-12-2023)
- Bug Fix: Fill information in debt report for debit entries associated with custom academic debt treasury events [#qubIT-Fenix-4659]

11.2.2 (06-12-2023)
- Improvement: Add finantial entity info and net exemption to debts report bean [#qubIT-Fenix-4655]

11.2.1 (05-12-2023)
- Refactor: Implements properties in debt report bean, to make available for reports [#qubIT-Fenix-4646]
- Bug Fix: Fix reading the registration last state type description, in AcademicTreasuryEvent#registrationStateDescription [#qubIT-Fenix-4641]
- Bug Fix: Add missing label translation, about the error of duplicated academic treasury event for registration tuition payment plan [#qubIT-Fenix-4641]

11.2.0 (22-11-2023)
- New Feature: Creation of payment reference codes by finantial entity, in academic debt generation rule for payment codes strategy [#qubIT-Fenix-4600]
- Improvement: Method to obtain the associated finantial entity by academic treasury event [#qubIT-Fenix-4598]

11.1.6 (31-10-2023)
- Refactor: Rename method PaymentRequestLog#isInvocationSuccess to PaymentRequestLog#isOperationSuccess [#qubIT-Fenix-4327]

11.1.5 (27-10-2023)
- Bug Fix: NPE in creation registration tuition, in cases where the amount for a tuition installment is zero [#qubIT-Fenix-4417]
- Bug Fix: When editing installment, save the installment order [#qubIT-Fenix-4401]
- Refactor: Remove the temporary fix flag for the correct academic tax debit entry date [relates to fix applied in version 8.6.7 of 16-02-2023]

11.1.4 (18-10-2023)
- Refactor: Rename method parameter for better code readability [#qubIT-Fenix-4459]