@@ -1,4 +1,5 @@
 - Improvement: Adds fenixedu OSS DM [#qubIT-Omnis-4736]
+- Improvement: Define personal email, institutional email and default email in reimbuserment report entry bean [#qubIT-Fenix-4691]
 
 11.3.1 (12-12-2023)
 - Bug Fix: Fix bug in PersonCustomer#switchCustomer, which prevents the creation of a new debt account [#qubIT-Fenix-4662]
